--- a/round1.ipynb
+++ b/round1.ipynb
@@ -2474,8 +2474,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(['x_144'], ['x_127']) are highly correlated: \n",
-    "remove any one of them. **Do not select both of them.**"
+    "**(['x_144'], ['x_127']) are highly correlated:**\n",
+    "remove any one of them."
    ]
   },
   {
