--- a/round1.ipynb
+++ b/round1.ipynb
@@ -3478,13 +3478,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 60 candidates, totalling 300 fits\n",
+      "Tuned Model Parameters: {'criterion': 'gini', 'max_depth': 14, 'n_estimators': 180}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# fit the model to random forest and find the feature importances\n",
+    "\n",
+    "# Specify possible hyperparameters \n",
+    "parameters = {\n",
+    "    'criterion':['gini','entropy'],\n",
+    "    'max_depth':[10,11,12,13,14],\n",
+    "    \"n_estimators\": np.array([90, 120, 140, 160, 180, 200])\n",
+    "}\n",
+    "# Instantiate GridSearchCV object\n",
+    "cross_validation = StratifiedKFold(n_splits=5, random_state= 48, shuffle = True)\n",
+    "gs_cv = GridSearchCV(RandomForestClassifier(), parameters, scoring=\"roc_auc\", cv=cross_validation,  verbose=3, n_jobs=-1)\n",
+    "\n",
+    "# Fit to training set\n",
+    "gs_cv.fit(X_train_scaled_1_SMOTE, y_train_SMOTE)\n",
+    "\n",
+    "print(\"Tuned Model Parameters: {}\".format(gs_cv.best_params_))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# fit the model to random forest and find the feature importances\n",
-    "\n"
+    "# Create a Random Forest classifier\n",
+    "rf_classifier = RandomForestClassifier(n_estimators=180, criterion= 'gini', max_depth=14)\n",
+    "\n",
+    "# Fit the model to the training data\n",
+    "rf_classifier.fit(X_train_scaled_1_SMOTE,y_train_SMOTE)\n",
+    "\n",
+    "# Get feature importances\n",
+    "feature_importances = rf_classifier.feature_importances_\n",
+    "\n",
+    "# Create a DataFrame to store feature names and their importances\n",
+    "feature_importance_df = pd.DataFrame({'Feature': X_train_scaled_1_SMOTE.columns, 'Importance': feature_importances})\n",
+    "\n",
+    "# Sort the DataFrame by importance in descending order\n",
+    "feature_importance_df = feature_importance_df.sort_values(by='Importance', ascending=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Feature  Importance\n",
+      "21    x_99    0.107576\n",
+      "7     x_38    0.087943\n",
+      "9     x_45    0.086388\n",
+      "10    x_62    0.072277\n",
+      "13    x_68    0.064618\n",
+      "1    x_113    0.063406\n",
+      "20    x_91    0.051569\n",
+      "14     x_7    0.049626\n",
+      "18    x_78    0.044027\n",
+      "3    x_124    0.043522\n",
+      "19    x_83    0.043112\n",
+      "8     x_42    0.040790\n",
+      "5      x_2    0.040059\n",
+      "2     x_12    0.039097\n",
+      "15    x_70    0.036561\n",
+      "4     x_16    0.034005\n",
+      "17    x_73    0.033700\n",
+      "6     x_30    0.013644\n",
+      "11    x_64    0.013096\n",
+      "12    x_67    0.012838\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Select the top 20 features\n",
+    "top_20_features = feature_importance_df.head(20)\n",
+    "\n",
+    "# Display the top 20 features\n",
+    "print(top_20_features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
