--- a/round1.ipynb
+++ b/round1.ipynb
@@ -3575,6 +3575,520 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['x_99', 'x_38', 'x_45', 'x_62', 'x_68', 'x_113', 'x_91', 'x_7',\n",
+       "       'x_78', 'x_124', 'x_83', 'x_42', 'x_2', 'x_12', 'x_70', 'x_16',\n",
+       "       'x_73', 'x_30', 'x_64', 'x_67'], dtype=object)"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "columns_rf = top_20_features.Feature.values\n",
+    "columns_rf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.90      0.95      0.92       734\n",
+      "           1       0.21      0.11      0.14        90\n",
+      "\n",
+      "    accuracy                           0.86       824\n",
+      "   macro avg       0.55      0.53      0.53       824\n",
+      "weighted avg       0.82      0.86      0.84       824\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = rf_classifier.predict(X_test_scaled_1_df)\n",
+    "print(classification_report(y_test,y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### RFECV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Which variables should be selected?  [ True  True  True  True  True  True  True  True  True  True  True  True\n",
+      "  True False False  True  True  True  True  True False  True]\n",
+      "\n",
+      "Ranking of the variables:  [1 1 1 1 1 1 1 1 1 1 1 1 1 3 2 1 1 1 1 1 4 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Instantiate Estimator\n",
+    "logReg = LogisticRegression(class_weight = \"balanced\")\n",
+    "\n",
+    "selector = RFECV(logReg, step=1, cv=5, scoring=\"roc_auc\") # selection result depends on selected metric \n",
+    "selector = selector.fit(X_train_scaled_1_SMOTE, y_train_SMOTE)\n",
+    "print(\"\\nWhich variables should be selected? \", selector.support_)\n",
+    "print(\"\\nRanking of the variables: \", selector.ranking_)\n",
+    "# print(\"\\nGrid search scores: \", selector.grid_scores_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>features</th>\n",
+       "      <th>ranking</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>x_109</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>x_113</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>x_12</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>x_124</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>x_16</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>x_2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>x_30</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>x_38</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>x_42</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>x_45</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>x_62</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>x_64</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>x_67</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>x_68</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>x_7</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>x_70</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>x_71</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>x_73</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>x_78</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>x_83</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>x_91</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>x_99</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   features  ranking\n",
+       "0     x_109        1\n",
+       "1     x_113        1\n",
+       "2      x_12        1\n",
+       "3     x_124        1\n",
+       "4      x_16        1\n",
+       "5       x_2        1\n",
+       "6      x_30        1\n",
+       "7      x_38        1\n",
+       "8      x_42        1\n",
+       "9      x_45        1\n",
+       "10     x_62        1\n",
+       "11     x_64        1\n",
+       "12     x_67        1\n",
+       "13     x_68        3\n",
+       "14      x_7        2\n",
+       "15     x_70        1\n",
+       "16     x_71        1\n",
+       "17     x_73        1\n",
+       "18     x_78        1\n",
+       "19     x_83        1\n",
+       "20     x_91        4\n",
+       "21     x_99        1"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "RFECV_log_reg = pd.DataFrame()\n",
+    "RFECV_log_reg['features'] = X_train_scaled_1_SMOTE.columns\n",
+    "RFECV_log_reg['ranking'] = selector.ranking_\n",
+    "RFECV_log_reg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['x_109', 'x_113', 'x_12', 'x_124', 'x_16', 'x_2', 'x_30', 'x_38',\n",
+       "       'x_42', 'x_45', 'x_62', 'x_64', 'x_67', 'x_7', 'x_70', 'x_71',\n",
+       "       'x_73', 'x_78', 'x_83', 'x_99'], dtype=object)"
+      ]
+     },
+     "execution_count": 167,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "condition = (RFECV_log_reg['ranking']==1) | (RFECV_log_reg['ranking']==2)\n",
+    "columns_rfecv_logreg = RFECV_log_reg[condition]['features'].values\n",
+    "columns_rfecv_logreg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(columns_rfecv_logreg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.94      0.58      0.71       734\n",
+      "           1       0.17      0.70      0.27        90\n",
+      "\n",
+      "    accuracy                           0.59       824\n",
+      "   macro avg       0.55      0.64      0.49       824\n",
+      "weighted avg       0.86      0.59      0.67       824\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = selector.predict(X_test_scaled_1_df)\n",
+    "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18\n",
+      "['x_99', 'x_38', 'x_45', 'x_62', 'x_113', 'x_7', 'x_78', 'x_124', 'x_83', 'x_42', 'x_2', 'x_12', 'x_70', 'x_16', 'x_73', 'x_30', 'x_64', 'x_67']\n"
+     ]
+    }
+   ],
+   "source": [
+    "common_cols = [col for col in columns_rf if col in columns_rfecv_logreg]\n",
+    "print(len(common_cols))\n",
+    "print(common_cols)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ## rfecv : estimator --> random forest\n",
+    "\n",
+    "# # Create a Random Forest classifier\n",
+    "# rf_classifier = RandomForestClassifier(n_estimators=180, criterion= 'gini', max_depth=14)\n",
+    "\n",
+    "# selector_rf = RFECV(rf_classifier, step=1, cv=5)\n",
+    "# selector_rf = selector_rf.fit(X_train_scaled_1_SMOTE, y_train_SMOTE)\n",
+    "# print(\"\\nWhich variables should be selected? \", selector_rf.support_)\n",
+    "# print(\"\\nRanking of the variables: \", selector_rf.ranking_)\n",
+    "# # print(\"\\nGrid search scores: \", selector.grid_scores_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# y_pred = selector_rf.predict(X_test_scaled_1_df)\n",
+    "# print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['x_109', 'x_113', 'x_12', 'x_124', 'x_16', 'x_2', 'x_30', 'x_38',\n",
+       "       'x_42', 'x_45', 'x_62', 'x_64', 'x_67', 'x_7', 'x_70', 'x_71',\n",
+       "       'x_73', 'x_78', 'x_83', 'x_99'], dtype=object)"
+      ]
+     },
+     "execution_count": 180,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "columns_selected = columns_rfecv_logreg\n",
+    "columns_selected"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## try the same models of feature selection without smote"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Which variables should be selected?  [False False False False False False False False False  True False False\n",
+      " False False False False False False False False False  True]\n",
+      "\n",
+      "Ranking of the variables:  [12 21 11 20 14  8 16  3  5  1 19  6 15 18 17  4  7  2  9 10 13  1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Instantiate Estimator\n",
+    "logReg = LogisticRegression(class_weight = \"balanced\")\n",
+    "\n",
+    "selector_no_smote = RFECV(logReg, step=1, cv=5, scoring=\"roc_auc\") # selection result depends on selected metric \n",
+    "selector_no_smote = selector_no_smote.fit(X_train_scaled_1_df, y_train)\n",
+    "print(\"\\nWhich variables should be selected? \", selector_no_smote.support_)\n",
+    "print(\"\\nRanking of the variables: \", selector_no_smote.ranking_)\n",
+    "# print(\"\\nGrid search scores: \", selector.grid_scores_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.94      0.52      0.67       734\n",
+      "           1       0.16      0.72      0.26        90\n",
+      "\n",
+      "    accuracy                           0.54       824\n",
+      "   macro avg       0.55      0.62      0.46       824\n",
+      "weighted avg       0.85      0.54      0.62       824\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = selector_no_smote.predict(X_test_scaled_1_df)\n",
+    "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*model performs better when applied smote*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['x_109' 'x_113' 'x_12' 'x_124' 'x_16' 'x_2' 'x_30' 'x_38' 'x_42' 'x_45'\n",
+      " 'x_62' 'x_64' 'x_67' 'x_7' 'x_70' 'x_71' 'x_73' 'x_78' 'x_83' 'x_99']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(columns_selected)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 184,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(columns_selected)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
